src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__assoc_right_preserved.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&unit)
---
expr:
  | <assoc=right> expr ''^'' expr
  | ID
