src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__caller_alt_label_preserved.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&unit)
---
e:
  | e ''+'' ID #ViaSatellite
  | ID #Atom
