src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__consecutive_optionals.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&unit)
---
e:
  | e ''+'' e
  | e e? ''..''
  | e ''..''
  | ''..''
  | ID
