src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__external_satellite_retained.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&unit)
---
t:
  | t ''?''
  | ID
  | t ''['' '']''
arr:
  | t ''['' '']''
new_arr:
  | ''new'' arr
