src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__name_cycle_collapsed.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&unit)
---
name:
  | simple_name
  | name ''.'' simple_name
simple_name:
  | ID
