src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__own_label_action_spliced.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&unit)
---
e:
  | e ''+'' i=ID <action>
  | ID
