src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__preserved_rule_selected_as_hub.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&fixture.unit)
---
b:
  | b ''a'' ''b''
  | A ''b''
  | B
