src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__preserved_satellite_retained.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&fixture.unit)
---
e:
  | e ''+'' ID
  | ID
s:
  | e ''+'' ID
