src/bin_support/grammar/snapshots/antlr4_rust_gen__grammar__mutual_recursion__tests__split_label_on_both_products.snap
---
source: src/bin_support/grammar/mutual_recursion.rs
expression: render(&unit)
---
e:
  | e ''+'' e #Add
  | e ''..'' #Range
  | ''..'' #Range
  | ID #Atom
